Refactored modules for Views and Rendering

--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@
 			;
 
 		// Renderer
+		/*
+		d3to3.config({
+			id: "d3to3_panel"
+			// Lights
+			// 2D / 3D
+		});
+		*/
+
 		d3to3.render("d3to3_panel");
 
 	</script>
