Added 3D version for circles view - sphere

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
 
 		// Renderer
 		d3to3.configure({
-			target: "d3to3_panel",
-			view  : "circle",
-			mouseControls: true
+			'target': 'd3to3_panel',
+			'view'  : 'circle',
+			'3D': false
 		}).render();
 
 	</script>
