Re-enabled mouse controls

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 		d3to3.configure({
 			'target': 'd3to3_panel',
 			'view'  : 'circle',
+			'mouseControls'  : true,
 			'3D': false
 		}).render();
 
