Added orthographic camera support

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			'target': 'd3to3_panel',
 			'view'  : 'circle',
 			'mouseControls'  : true,
-			'3D': false
+			'3D': true
 		}).render();
 
 	</script>
