--- a/index.html
+++ b/index.html
@@ -42,13 +42,18 @@
 			{'Name': 'Node 8', 'Category': 'C', 'Calories':69 , 'Protein (g)':10, 'radius': 12 },
 			{'Name': 'Node 9', 'Category': 'A', 'Calories':30 , 'Protein (g)':8, 'radius': 12 }
 		];
+		data.forEach(function(d) {
+			d.Calories = +d.Calories;
+			d["Protein (g)"] = +d["Protein (g)"];
+		});
 
 		// Setup x-Axis values
 		var xScale = d3.scale.linear().range([0, width]), 
 			xValue = function(d) { return d.Calories;        },
 			xMap   = function(d) { return xScale(xValue(d)); }, 
 			xAxis  = d3.svg.axis().scale(xScale).orient("bottom");
-
+		
+		
 		// Setup y-Axis values
 		var yScale = d3.scale.linear().range([height, 0]), 
 			yValue = function(d) { return d["Protein (g)"];  }, 
@@ -63,96 +68,55 @@
 			cValue = function(d) { return d.Category; };
 	
 		// Append the graph
-		var svg = 
-
-			d3.select("#d3_panel")
+		var svg = d3.select("#d3_panel")
 			.append("svg")
 			.attr("width", width + margin.left + margin.right)
 			.attr("height", height + margin.top + margin.bottom)
-
-			// #####################
-			// MAKE THIS BOLD
-			.d3to3().canvas()
-
-			// #####################
-
 			.append("g")
-			.attr("transform", "translate(" + margin.left + "," + margin.top + ")")
-			;
-
-
-		// Load Data
-		data.forEach(function(d) {
-			d.Calories = +d.Calories;
-			d["Protein (g)"] = +d["Protein (g)"];
-		});
+			.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 		
-		// don't want dots overlapping axis, so add in buffer to data domain
 		xScale.domain([d3.min(data, xValue)-1, d3.max(data, xValue)+1]);
 		yScale.domain([d3.min(data, yValue)-1, d3.max(data, yValue)+1]);
 
-		// x-axis
+		// X Axis
 		svg.append("g")	
 			.attr("class", "x axis")
 			.call(xAxis)
 			
 			// #####################
-			// MAKE THIS BOLD
-
-			.d3to3().axis().x();
-
+			.d3to3().axis();
 			// #####################
 
-		// y-axis
+		// Y Axis
 		svg.append("g")
 			.attr("class", "y axis")
 			.call(yAxis)
 			
 			// #####################
-			// MAKE THIS BOLD
-
-			.d3to3().axis().y();
-
+			.d3to3().axis();
 			// #####################
 
 		// Draw Circles
 		svg.selectAll(".dot")
 			.data(data)
 			.enter().append("circle")
-			.attr("class", "dot")
 			.attr("r", rMap)
 			.attr("cx", xMap)
 			.attr("cy", yMap)
-			.style("fill", function(d) { 
-				return color(cValue(d));
-			}) 
-			.on("mouseover", function(d) {
-				d3.select(this)
-					.transition()
-					.duration(200).
-					attr("r", rMap(d)+5);
-			})
-			.on("mouseout", function(d) {
-				d3.select(this)
-					.transition()
-					.duration(200)
-					.attr("r", rMap(d));
-			})
-			// #####################
-			// MAKE THIS BOLD
+			.style("fill", function(d) { return color(cValue(d));})
 
-			.d3to3().data()
+			// #####################
+			.d3to3().data();
 			// #####################
 
-			;
-
-		// Renderer
+		// #####################
 		d3to3.configure({
-			'target': 'd3to3_panel',
-			'view'  : 'circle',
-			'mouseControls'  : true,
-			'3D': true
+			'view'  : 'circle'
+			// 'mouseControls': true
+			// '3D': true,
+			// 'wireframe' : true,
 		}).render();
+		// #####################
 
 	</script>
 
