Added MVC graphic in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 </head>
 <body>
-
+	
+	<br>
+	<img src="assets/mvc.png" width="500"/>
 
 	<script src="lib/d3.js"></script>
 	<script src="lib/three.min.js"></script>
