--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 			{'Name': 'Node 1', 'Category': 'A', 'Calories':10 , 'Protein (g)':4, 'radius': 8  },
 			{'Name': 'Node 2', 'Category': 'A', 'Calories':20 , 'Protein (g)':6, 'radius': 9  },
 			{'Name': 'Node 3', 'Category': 'B', 'Calories':30 , 'Protein (g)':2, 'radius': 8  },
-			{'Name': 'Node 4', 'Category': 'B', 'Calories':46 , 'Protein (g)':2, 'radius': 9  },
-			{'Name': 'Node 5', 'Category': 'A', 'Calories':67 , 'Protein (g)':3, 'radius': 11 },
-			{'Name': 'Node 6', 'Category': 'A', 'Calories':83 , 'Protein (g)':8, 'radius': 8  },
-			{'Name': 'Node 7', 'Category': 'C', 'Calories':63 , 'Protein (g)':7, 'radius': 10 },
+			{'Name': 'Node 4', 'Category': 'B', 'Calories':40 , 'Protein (g)':2, 'radius': 16  },
+			{'Name': 'Node 5', 'Category': 'A', 'Calories':60 , 'Protein (g)':3, 'radius': 11 },
+			{'Name': 'Node 6', 'Category': 'A', 'Calories':80 , 'Protein (g)':8, 'radius': 10  },
+			{'Name': 'Node 7', 'Category': 'C', 'Calories':63 , 'Protein (g)':7, 'radius': 20 },
 			{'Name': 'Node 8', 'Category': 'C', 'Calories':69 , 'Protein (g)':10, 'radius': 12 },
 			{'Name': 'Node 9', 'Category': 'A', 'Calories':30 , 'Protein (g)':8, 'radius': 12 }
 		];
@@ -104,7 +104,7 @@
 			// #####################
 
 		// Draw Circles
-		svg.selectAll(".dot")
+		svg.selectAll()
 			.data(data)
 			.enter().append("circle")
 			.attr("r", rMap)
@@ -120,9 +120,8 @@
 
 			// TODO: Make view optional and extract it from d3to3.data({});
 			'view'  : 'circle',
-			'mouseControls': true
-
-			// '3D': true,
+			'3D': true,
+			'controls': true,
 			// 'wireframe' : true
 
 		}).render();
