Removed wireframe view support

--- a/index.html
+++ b/index.html
@@ -117,11 +117,9 @@
 
 		// #####################
 		
-		d3to3.configure({
-			'controls': true,
-			'3D': true,
-			// 'wireframe' : true
-		}).render();
+		d3to3
+		.configure({'controls': true})
+		.render();
 
 		// #####################
 	</script>
