Added Suport for 3D network including interactivity

--- a/examples/scatter.html
+++ b/examples/scatter.html
@@ -8,19 +8,19 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 	<!-- Styles -->
-	<link rel="stylesheet" href="assets/reset.css">
-	<link rel="stylesheet" href="assets/style.css">
-	<link rel="stylesheet" href="assets/style.css">
+	<link rel="stylesheet" href="../assets/reset.css">
+	<link rel="stylesheet" href="../assets/style.css">
+	<link rel="stylesheet" href="../assets/style.css">
 
 </head>
 <body>
 	
 	<br>
-	<img src="assets/mvc.png" width="500"/>
+	<img src="../assets/mvc.png" width="500"/>
 
-	<script src="lib/d3.js"></script>
-	<script src="lib/three.min.js"></script>
-	<script src="dist/d3to3.js"></script>
+	<script src="../lib/d3.js"></script>
+	<script src="../lib/three.min.js"></script>
+	<script src="../dist/d3to3.js"></script>
 	<ul class="panels">
 		<li>
 			<h2>D3</h2>
