--- a/examples/scatter.html
+++ b/examples/scatter.html
@@ -118,8 +118,7 @@
 		// #####################
 		
 		d3to3
-		.configure({'controls': true})
-		.render();
+		.render({'svg': 'd3_panel'})
 
 		// #####################
 	</script>
