Cleaned up library

--- a/examples/scatter.html
+++ b/examples/scatter.html
@@ -117,8 +117,10 @@
 
 		// #####################
 		
-		d3to3
-		.render({'svg': 'd3_panel'})
+		d3to3.render({
+			'source': 'd3_panel',
+			'target': 'd3to3_panel'
+		})
 
 		// #####################
 	</script>
