Added external style support for lines

--- a/examples/animation.html
+++ b/examples/animation.html
@@ -74,7 +74,7 @@ text {
 	</ul>
 
 
-<script type="text/javascript" src="loadjson.js"></script>
+<script type="text/javascript" src="nations_data.js"></script>
 <script type="text/javascript">
 
 //console.log(window.nations);
