--- a/examples/network.html
+++ b/examples/network.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="../assets/style.css">
 	<link rel="stylesheet" href="../assets/style.css">
 
-
+    <!-- Network Style -->
 	<style type="text/css">
 		.link {
 		  stroke: #808080;
@@ -26,7 +26,6 @@
 	<script src="../lib/three.min.js"></script>
 	<script src="../dist/d3to3.js"></script>
 
-
 	<ul class="panels">
 		<li>
 			<h2>D3</h2>
@@ -38,160 +37,98 @@
 		</li>
 	</ul>
 
-<script src="network_data.js"></script> 
-
+    <script src="network_data.js"></script> 
 	<script type="text/javascript">
-/*
-var networkData = {
-  "nodes":[
-    {"name":"Myriel","group":1},
-    {"name":"Myriel2","group":2},
-  ],
-  "links":[
-    {"source":0,"target":1,"value":1},
-    {"source":1,"target":0,"value":3},
-  ]
-}
-*/
+
+        var width = 500,
+            height = 500;
+
+        var color = d3.scale.category20();
+
+        var svg = d3.select("#d3_panel")
+            .append("svg")
+            .attr("width", width)
+            .attr("height", height);
+
+        var force = d3.layout.force()
+            .size([width, height])
+            .linkDistance(130)
+            .linkStrength(0.2)
+            .friction(0.1)
+            .linkDistance(200)
+            .charge(-100)
+            .gravity(0.1);
+
+            force
+            .nodes(networkData.nodes)
+            .links(networkData.links)
+            .on('end', function() { 
+
+                console.log("Rendering d3to3 network...");
+
+                d3to3.render({
+                    'source'  : 'd3_panel',
+                    'target'  : 'd3to3_panel', 
+                    '3D'      : true,
+                    'controls': true, 
+                    'orbit'   : true, 
+                    'network' : true, 
+                    'style'   : {
+                        'line': { 'color':'#808080' } 
+                    }
+                })
+            }); 
+
+        // Apply force to graph
+
+        var n = networkData.nodes.length;
+
+        force.start();
+
+        for (var i=n; i>0; --i)
+            force.tick();
+
+        force.stop();
+
+        // Append edges
+
+        var link = svg.selectAll(".link")
+            .data(networkData.links)
+            .enter()
+            .append("line")
+            .attr("class", "link")
+            .attr("x1",function(d){ return d.source.x; })
+            .attr("y1",function(d){ return d.source.y; })
+            .attr("x2",function(d){ return d.target.x; })
+            .attr("y2",function(d){ return d.target.y; })
+            .style("stroke-width", function(d) { return Math.sqrt(d.value); })
+            .d3to3().data();
+
+        // Append nodes
+
+        var node = svg.selectAll(".node")
+            .data(networkData.nodes)
+            .enter()
+            .append("circle")
+            .attr("class", "node")
+            .attr("cx", function(d){return d.x;})
+            .attr("cy", function(d){return d.y;})
+            .attr("r", function(d) {return 4; }) //return Math.floor(Math.random() * 8) + 4; })
+            .style("fill", function(d) { return color(d.group); })
+            .d3to3().data();
 
 
+        // Setup ticks for force
 
+        force.on("tick", function() {
+            link.attr("x1", function(d) { return d.source.x; })
+                .attr("y1", function(d) { return d.source.y; })
+                .attr("x2", function(d) { return d.target.x; })
+                .attr("y2", function(d) { return d.target.y; });
 
-// MUST SEE
-// MUST SEE
-// MUST SEE
-
-// RENAME TO 
-// d-ThreeDim
-
-// http://threejs.org/examples/#css3d_sprites
-// http://threejs.org/examples/#css3d_molecules
-// http://bost.ocks.org/mike/fisheye/
-
-// MUST SEE
-// MUST SEE
-// MUST SEE
-
-var width = 500,
-    height = 500;
-
-
-var color = d3.scale.category20();
-
-/*    graph.nodes[1].x = 200;
-    graph.nodes[1].y = 100;
-    graph.nodes[2].x = 300;
-    graph.nodes[2].y = 100;
-    graph.nodes[3].x = 400;
-    graph.nodes[3].y = 100;
-*/
-
-
-/*
-
-    TODO: ADD D3 - TIP
-*/
-
-function tick() {
-  link.attr("x1", function(d) { return d.source.x; })
-      .attr("y1", function(d) { return d.source.y; })
-      .attr("x2", function(d) { return d.target.x; })
-      .attr("y2", function(d) { return d.target.y; });
-  node.attr("cx", function(d) { return d.x; })
-      .attr("cy", function(d) { return d.y; });
-}
-
-var svg = d3.select("#d3_panel")
-    .append("svg")
-    .attr("width", width)
-    .attr("height", height);
-
-
-var force = d3.layout.force()
-    .size([width, height])
-    .linkDistance(130)
-    .linkStrength(0.2)
-    .friction(0.1)
-    .linkDistance(200)
-    .charge(-100)
-    .gravity(0.1);
-/*    
-*/
-
-
-    force
-    .nodes(networkData.nodes)
-    .links(networkData.links)
-    .on('end', function() { 
-    console.log("Rendering d3to3 network...");
-       d3to3.render({
-            'source' : 'd3_panel',
-            'target' : 'd3to3_panel', 
-            '3D': true,
-            'controls': true, 
-            'orbit': true, 
-            'network': true, 
-            'style': {
-                'line': {
-                    'color':'#808080'
-                } 
-            },
-        })
-    }); 
-    var n = networkData.nodes.length;
-
-
-    force.start();
-    for (var i=n; i>0; --i){
-        force.tick();
-    }
-    force.stop();
-
-
-
-  var link = svg.selectAll(".link")
-    .data(networkData.links)
-    .enter()
-    .append("line")
-    .attr("class", "link")
-    .attr("x1",function(d){ return d.source.x; })
-    .attr("y1",function(d){ return d.source.y; })
-    .attr("x2",function(d){ return d.target.x; })
-    .attr("y2",function(d){ return d.target.y; })
-    .style("stroke-width", function(d) { return Math.sqrt(d.value); })
-	.d3to3().data();
-
-
-  var node = svg.selectAll(".node")
-    .data(networkData.nodes)
-    .enter()
-    .append("circle")
-    .attr("class", "node")
-    .attr("cx", function(d){return d.x;})
-    .attr("NAME-REMOVE-THIS", function(d){return d.name;})
-    .attr("cy", function(d){return d.y;})
-    .attr("r", function(d) {return 4; }) //return Math.floor(Math.random() * 8) + 4; })
-    .style("fill", function(d) { return color(d.group); })
-    .d3to3().data();
-
-
-    // TODO: 
-    // ADD ON MOUSE OVER FOR NODES
-    //      SHOW TOOLTIP WITH NODE NAME
-
-    // ADD ON MOUSE OVER FOR EDGES
-    //      SHOW TOOLTIP WITH EDGE CONNECTION (2 Nodes) and strength
-
-  force.on("tick", function() {
-    link.attr("x1", function(d) { return d.source.x; })
-        .attr("y1", function(d) { return d.source.y; })
-        .attr("x2", function(d) { return d.target.x; })
-        .attr("y2", function(d) { return d.target.y; });
-
-    node.attr("cx", function(d) { return d.x; })
-        .attr("cy", function(d) { return d.y; });
-  });
-
+            node.attr("cx", function(d) { return d.x; })
+                .attr("cy", function(d) { return d.y; });
+        });
 
 	</script>
 
